# lol-match-oracle

./: .env.example  .gitignore  Makefile  README.md  how-to-run.md  mlflow.db  optuna_studies.db  pyproject.toml
configs/: data.yaml  model.yaml  training.yaml
notebooks/:  01_data_exploration.ipynb  02_data_quality.ipynb  03_feature_engineering.ipynb  04_baseline_models.ipynb  05_model_development.ipynb  06_hyperparameter_tuning.ipynb  07_model_evaluation.ipynb  09_pregame_analysis.ipynb
scripts/: download_data.py  run_ablation_audit.py  run_data_quality.py  run_evaluation.py  run_optimization.py  run_pipeline.py  run_training.py
src/oracle/data/: __init__.py  cleaner.py  loader.py  merger.py  pregame_merger.py  splitter.py
src/oracle/evaluation/: __init__.py  metrics.py  report.py  visualizations.py
src/oracle/features/: __init__.py  champion_features.py  engineering.py  pipeline.py  player_features.py  pregame_features.py  team_features.py
src/oracle/models/: __init__.py  baseline.py  svm_model.py  trainer.py  tree_models.py
src/oracle/optimization/: __init__.py  callbacks.py  objective.py  search_spaces.py
src/oracle/serving/: api.py  predict.py  schemas.py
src/oracle/utils/: __init__.py  config.py  constants.py  leakage.py  logger.py
