[project]
name = "lol-match-oracle"
version = "0.1.0"
description = "League of Legends Match outcome predictor"
readme = "README.md"
authors = [
    { name = "amir-kedis", email = "amir.kedis@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "kaggle>=2.0.0",
    "matplotlib>=3.10.8",
    "missingno>=0.5.2",
    "nbformat>=5.10.4",
    "pandas>=3.0.2",
    "pip>=26.0.1",
    "plotly>=6.6.0",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
    "ruff",
]

[project.scripts]
oracle = "oracle:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "oracle"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
