[project]
name = "lol-match-oracle"
version = "0.1.0"
description = "League of Legends Match outcome predictor"
readme = "README.md"
authors = [
    { name = "amir-kedis", email = "amir.kedis@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "great-expectations>=1.3.15",
    "ipykernel>=7.2.0",
    "kaggle>=2.0.0",
    "matplotlib>=3.10.8",
    "mlflow>=2.22.0",
    "missingno>=0.5.2",
    "nbformat>=5.10.4",
    "optuna>=4.5.0",
    "pandas>=2.2.3,<3.0.0",
    "pip>=26.0.1",
    "plotly>=6.6.0",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff",
]

[project.scripts]
oracle = "oracle:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "oracle"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
